# demo-usage-rapidOCR-PaddleOCR

./: .gitignore  README.md  main.py  paddle2onnx-convert.ipynb  pyproject.toml  use-rapidocr-onnx-new.ipynb  use-rapidocr-onnx-old.ipynb
