[project]
name = "paddle2onnx-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.21.1",
    "paddle2onnx>=2.0.1",
    "paddlepaddle>=3.0.0",
    "rapidocr>=3.3.1",
    "rapidocr-onnxruntime>=1.4.4",
    "setuptools>=80.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
